--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,5 +19,7 @@ jobs:
         run: make test
       - name: format
         run: make format
+      - name: run function
+        run: calculate_mean
       - name: deploy
         run: make deploy
