--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,6 +20,6 @@ jobs:
       - name: format
         run: make format
       - name: run function
-        run: calculate_mean
+        run: python stat1.py
       - name: deploy
         run: make deploy
