--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,16 +1,23 @@
-name: CI
+name: Test Multiple Python Versions
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:
+  #workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.9,3.10.x,3.11]
     steps:
       - uses: actions/checkout@v3
+      - name: set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3 
+        with:
+          python-version: ${{ matrix.python-version }} 
       - name: install packages
         run: make install
       - name: lint
@@ -19,7 +26,3 @@ jobs:
         run: make test
       - name: format
         run: make format
-      - name: run function
-        run: python stat1.py
-      - name: deploy
-        run: make deploy
