--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,28 +1,21 @@
-name: Test Multiple Python Versions
+name: CI
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  #workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9,3.10.x,3.11]
+        python-version: [3.7, 3.8, 3.9]
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3 
-        with:
-          python-version: ${{ matrix.python-version }} 
       - name: install packages
         run: make install
-      - name: lint
-        run: make lint
-      - name: test
-        run: make test
       - name: format
         run: make format
